--- a/MVVMHabit-androidx/app/src/main/res/layout/fragment_network.xml
+++ b/MVVMHabit-androidx/app/src/main/res/layout/fragment_network.xml
@@ -15,8 +15,9 @@
             name="adapter"
             type="BindingRecyclerViewAdapter" />
 
-        <import type="me.goldze.mvvmhabit.binding.viewadapter.recyclerview.LayoutManagers" />
+<!--        <import type="me.goldze.mvvmhabit.binding.viewadapter.recyclerview.LayoutManagers" />-->
 
+        <import type="me.tatarka.bindingcollectionadapter2.LayoutManagers" />
         <import type="me.goldze.mvvmhabit.binding.viewadapter.recyclerview.LineManagers" />
     </data>
 
@@ -35,14 +36,14 @@
             binding:tr_head_height="80dp"
             binding:tr_wave_height="80dp">
 
-            <androidx.recyclerview.widget.RecyclerView
+            <!--<androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 binding:adapter="@{adapter}"
                 binding:itemBinding="@{viewModel.itemBinding}"
                 binding:items="@{viewModel.observableList}"
                 binding:layoutManager="@{LayoutManagers.linear()}"
-                binding:lineManager="@{LineManagers.horizontal()}" />
+                binding:lineManager="@{LineManagers.horizontal()}" />-->
 
         </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
 
