--- a/MVVMHabit-androidx/app/src/main/res/layout/fragment_multi_rv.xml
+++ b/MVVMHabit-androidx/app/src/main/res/layout/fragment_multi_rv.xml
@@ -15,8 +15,8 @@
             name="adapter"
             type="BindingRecyclerViewAdapter" />
 
-<!--        <import type="me.goldze.mvvmhabit.binding.viewadapter.recyclerview.LayoutManagers" />-->
-        <import type="me.tatarka.bindingcollectionadapter2.LayoutManagers" />
+        <import type="me.goldze.mvvmhabit.binding.viewadapter.recyclerview.LayoutManagers" />
+<!--        <import type="me.tatarka.bindingcollectionadapter2.LayoutManagers" />-->
         <import type="me.goldze.mvvmhabit.binding.viewadapter.recyclerview.LineManagers" />
     </data>
 
